--- a/views/rdv-list.html
+++ b/views/rdv-list.html
@@ -18,9 +18,7 @@ Liste des RDV
 
     <li data-ng-repeat="item in value| orderBy : 'date'">
 
-        <div class="avatar" style="background-image:url({{item.beneficiaire.avatar}})">
-
-        </div>
+        <div class="avatar" style="background-image:url({{item.beneficiaire.avatar}})"></div>
 
         <a href="#rdv-detail/{{item.id}}">
 
