--- a/css/index.css
+++ b/css/index.css
@@ -309,7 +309,6 @@ select {
 .detail-rdv .header {
   padding: 15px;
   font-size: 18px;
-  border-bottom: solid 1px whitesmoke;
 }
 .detail-rdv .header:after {
   display: block;
@@ -319,17 +318,98 @@ select {
   content: "";
   visibility: hidden;
 }
+.detail-rdv .header .avatar {
+  width: 72px;
+  height: 72px;
+  float: left;
+  margin-right: 3%;
+  background-color: whitesmoke;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100% auto;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+}
 .detail-rdv .header .date {
   float: left;
-  width: 50%;
+  width: 33%;
+  line-height: 72px;
+  vertical-align: middle;
 }
 .detail-rdv .header .heure {
   float: right;
-  width: 50%;
+  width: 33%;
+  line-height: 72px;
+  vertical-align: middle;
   text-align: right;
 }
 .detail-rdv .content {
   padding: 15px;
+  padding-top: 0;
+  /* Barre du statut et des détails du remboursement */
+}
+.detail-rdv .content .remboursement {
+  margin-bottom: 15px;
+  padding: 10px 15px;
+  margin-left: -15px;
+  width: calc(115%);
+  color: #fff;
+  /* Affiché que si l'état est à false */
+}
+.detail-rdv .content .remboursement:after {
+  display: block;
+  float: none;
+  clear: both;
+  height: 0;
+  content: "";
+  visibility: hidden;
+}
+.detail-rdv .content .remboursement.false {
+  background-color: #ffc04d;
+  border-top: solid 1px #ffb733;
+  border-bottom: solid 1px #ffb733;
+}
+.detail-rdv .content .remboursement.true {
+  background-color: #b8dc70;
+  border-top: solid 1px #aed75b;
+  border-bottom: solid 1px #aed75b;
+}
+.detail-rdv .content .remboursement .date,
+.detail-rdv .content .remboursement .etat,
+.detail-rdv .content .remboursement .montant,
+.detail-rdv .content .remboursement .message {
+  float: left;
+  width: calc(30.3030303%);
+  text-align: center;
+  line-height: 21px;
+  vertical-align: middle;
+}
+.detail-rdv .content .remboursement .etat {
+  text-align: left;
+}
+.detail-rdv .content .remboursement .etat .true,
+.detail-rdv .content .remboursement .etat .false {
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+}
+.detail-rdv .content .remboursement .etat .true {
+  background-image: url(../img/check-white.svg);
+}
+.detail-rdv .content .remboursement .etat .false {
+  background-image: url(../img/schedule-white.svg);
+}
+.detail-rdv .content .remboursement .montant {
+  text-align: right;
+  font-weight: bold;
+}
+.detail-rdv .content .remboursement .message {
+  text-align: center;
+  font-weight: normal;
 }
 .detail-rdv .content .titre {
   margin-bottom: 10px;
@@ -368,8 +448,8 @@ select {
   margin-top: 15px;
   padding: 10px;
   text-align: justify;
-  background-color: whitesmoke;
-  border-top: solid 2px gold;
+  background-color: #f8f8f8;
+  border-top: solid 2px #ffd280;
 }
 .detail-rdv .content .notes h3 {
   margin-bottom: 5px;
@@ -378,7 +458,7 @@ select {
   margin-top: 15px;
   background-color: whitesmoke;
   width: 100%;
-  height: 200px;
+  height: 150px;
 }
 .detail-rdv .footer {
   padding: 15px 15px 15px 15px;
@@ -463,6 +543,73 @@ select {
   background-color: deepskyblue;
   color: #fff;
 }
+/* Popups */
+.popup {
+  position: fixed;
+  z-index: 2;
+  width: 30%;
+  top: 20%;
+  left: 35%;
+  right: 35%;
+  background-color: #fff;
+  border: solid 1px #dcdcdc;
+  overflow: hidden;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
+  /* Masque transparent */
+  /* Styling */
+}
+@media all and (max-width: 480px) {
+  .popup {
+    width: 80%;
+    left: 10%;
+    right: 10%;
+  }
+}
+.popup-masque {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.popup .header {
+  background-color: #dcdcdc;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+.popup .content {
+  padding: 10px;
+  text-align: justify;
+}
+.popup .footer {
+  text-align: center;
+  padding: 10px;
+}
+.popup .footer .btn {
+  width: 40%;
+  margin-left: 2%;
+  margin-right: 2%;
+}
+.popup.danger {
+  border-color: #ff4d4d;
+}
+.popup.danger .header {
+  background-color: #ff4d4d;
+}
+.popup.danger .footer .btn {
+  color: #ff4d4d;
+}
 /* Boutons */
 .btn,
 button,
@@ -471,11 +618,11 @@ input[type=reset] {
   padding: 8px 20px;
   background-color: rgba(0, 0, 0, 0.01);
   font-weight: bold;
-  color: #dcdcdc;
+  color: #a9a9a9;
   cursor: pointer;
   outline: none;
   text-decoration: none;
-  border: solid 1px whitesmoke;
+  border: solid 1px #dcdcdc;
   vertical-align: middle;
   border-radius: 7px;
   -webkit-border-radius: 7px;
