--- a/less/index.less
+++ b/less/index.less
@@ -383,25 +383,111 @@ select{
     .header{
         padding: 15px;
         font-size:18px;
-        border-bottom:solid 1px @gris-clair;
+        //border-bottom:solid 1px @gris-clair;
 
         &:after{
             .clearfix();
         }
 
+        .avatar{
+            width:72px;
+            height:72px;
+            float:left;
+            margin-right: 3%;
+            background-color:@gris-clair;
+            background-repeat:no-repeat;
+            background-position:center center;
+            background-size:100% auto;
+            .border-radius(50px);
+        }
+
         .date{
             float: left;
-            width: 50%;
-
+            width: 33%;
+            line-height: 72px; // Hauteur de l'avatar
+            vertical-align: middle;
         }
         .heure{
             float:right;
-            width: 50%;
+            width: 33%;
+            line-height: 72px; // Hauteur de l'avatar
+            vertical-align: middle;
             text-align: right;
         }
     }
     .content{
         padding: 15px;
+        padding-top:0;
+
+        /* Barre du statut et des détails du remboursement */
+        .remboursement{
+            margin-bottom: 15px;
+            padding: 10px 15px;
+            margin-left: -15px;
+            width: calc(100% + 15px);
+            color:#fff;
+
+            &:after{
+                .clearfix();
+            }
+
+            &.false{
+                background-color: lighten(orange, 15%);
+                border-top:solid 1px lighten(orange, 10%);
+                border-bottom:solid 1px lighten(orange, 10%);
+            }
+
+            &.true{
+                background-color: lighten(yellowgreen, 15%);
+                border-top:solid 1px lighten(yellowgreen, 10%);
+                border-bottom:solid 1px lighten(yellowgreen, 10%);
+            }
+
+            .date,
+            .etat,
+            .montant,
+            .message{
+                float:left;
+                width: calc(100% / 3.3);
+                text-align: center;
+                line-height:21px;
+                vertical-align:middle;
+            }
+
+            .etat{
+                text-align:left;
+
+                .true,
+                .false{
+                    display: inline-block;
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    width: 20px;
+                    height: 20px;
+                    vertical-align:middle;
+                }
+                .true{
+                    background-image: url(../img/check-white.svg);
+                }
+                .false{
+                    background-image: url(../img/schedule-white.svg);
+                }
+            }
+
+            .date{
+            }
+
+            .montant{
+                text-align: right;
+                font-weight: bold;
+            }
+
+            /* Affiché que si l'état est à false */
+            .message{
+                text-align:center;
+                font-weight:normal;
+            }
+        }
 
         .titre{
             margin-bottom: 10px;
@@ -442,8 +528,8 @@ select{
             margin-top: 15px;
             padding:10px;
             text-align:justify;
-            background-color:@gris-clair;
-            border-top : solid 2px gold;
+            background-color : lighten(@gris-clair, 1%);
+            border-top : solid 2px lighten(orange, 25px);
 
             h3{
                 margin-bottom: 5px;
@@ -454,7 +540,7 @@ select{
             margin-top: 15px;
             background-color: @gris-clair;
             width: 100%;
-            height: 200px;
+            height: 150px;
         }
     }
 
@@ -539,6 +625,76 @@ select{
     }
 }
 
+
+/* Popups */
+.popup{
+    position:fixed;
+    z-index: 2;
+    width:30%;
+    top:20%;
+    left:35%;
+    right:35%;
+    background-color:#fff;
+    border:solid 1px @gris;
+    overflow: hidden;
+    .border-radius(7px);
+    .box-shadow(3px 3px 5px);
+
+    @media all and (max-width:480px){
+        width : 80%;
+        left:10%;
+        right:10%;
+    }
+
+    /* Masque transparent */
+    &-masque{
+        position:fixed;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        z-index: 2;
+        background-color: rgba(0,0,0,0.3);
+    }
+    .header{
+        background-color: @gris;
+        color:#fff;
+        font-weight: bold;
+        padding: 10px;
+        .text-shadow(1px 1px 2px);
+    }
+
+    .content{
+        padding: 10px;
+        text-align: justify;
+    }
+
+    .footer{
+        text-align: center;
+        padding: 10px;
+
+        .btn{
+            width: 40%;
+            margin-left: 2%;
+            margin-right: 2%;
+        }
+    }
+
+    /* Styling */
+    &.danger{
+        border-color:lighten(red, 15%);
+
+        .header{
+            background-color: lighten(red, 15%);
+        }
+
+        .footer{
+            .btn{
+                color:lighten(red, 15%);
+            }
+        }
+    }
+}
 /* Boutons */
 .btn,
 button,
@@ -547,11 +703,11 @@ input[type=reset]{
     padding: 8px 20px;
     background-color: rgba(0,0,0,0.01);
     font-weight: bold;
-    color:@gris;
+    color:@gris-fonce;
     cursor: pointer;
     outline: none;
     text-decoration: none;
-    border:solid 1px @gris-clair;
+    border:solid 1px @gris;
     vertical-align: middle;
     .border-radius(7px);
     .box-shadow(2px 2px 3px);
