--- a/less/index.less
+++ b/less/index.less
@@ -383,7 +383,6 @@ select{
     .header{
         padding: 15px;
         font-size:18px;
-        //border-bottom:solid 1px @gris-clair;
 
         &:after{
             .clearfix();
@@ -631,16 +630,16 @@ select{
     position:fixed;
     z-index: 2;
     width:30%;
-    top:20%;
+    top:25%;
     left:35%;
     right:35%;
     background-color:#fff;
-    border:solid 1px @gris;
+    border:solid 2px @gris;
     overflow: hidden;
     .border-radius(7px);
-    .box-shadow(3px 3px 5px);
+    .box-shadow(3px 3px 7px);
 
-    @media all and (max-width:480px){
+    @media all and (max-width:640px){
         width : 80%;
         left:10%;
         right:10%;
@@ -654,13 +653,16 @@ select{
         left: 0;
         top: 0;
         z-index: 2;
-        background-color: rgba(0,0,0,0.3);
+        background-color: rgba(0,0,0,0.5);
     }
+
     .header{
         background-color: @gris;
         color:#fff;
         font-weight: bold;
         padding: 10px;
+		position:relative;
+		margin-right: -1px;
         .text-shadow(1px 1px 2px);
     }
 
@@ -694,6 +696,34 @@ select{
             }
         }
     }
+
+	&.warning{
+		border-color:lighten(orange, 15%);
+
+		.header{
+            background-color: lighten(orange, 15%);
+        }
+
+        .footer{
+            .btn{
+                color:lighten(orange, 15%);
+            }
+        }
+	}
+
+	&.success{
+		border-color:lighten(green, 5%);
+
+		.header{
+            background-color: lighten(green, 5%);
+        }
+
+        .footer{
+            .btn{
+                color:lighten(green, 5%);
+            }
+        }
+	}
 }
 /* Boutons */
 .btn,
