--- a/css/index.css
+++ b/css/index.css
@@ -80,6 +80,12 @@ select {
   font-size: 14px;
   color: deeppink;
 }
+textarea {
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans serif;
+  font-size: 14px;
+  line-height: 22px;
+  color: #000000;
+}
 /* header */
 .main-header {
   position: fixed;
@@ -104,6 +110,9 @@ select {
   width: calc(33.33333333%);
   text-align: center;
   border-bottom: solid 3px transparent;
+  transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
   /* Menu activé */
   /* Nom de l'application */
 }
@@ -454,11 +463,20 @@ select {
 .detail-rdv .content .notes h3 {
   margin-bottom: 5px;
 }
+.detail-rdv .content .notes textarea {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  height: 70px;
+  overflow: hidden;
+  background-color: transparent;
+  border: none;
+}
 .detail-rdv .content .maps {
   margin-top: 15px;
   background-color: whitesmoke;
   width: 100%;
-  height: 150px;
+  height: 120px;
 }
 .detail-rdv .footer {
   padding: 15px 15px 15px 15px;
@@ -540,8 +558,12 @@ select {
   padding: 15px;
 }
 .search-ps .footer .btn {
-  background-color: deepskyblue;
+  background-color: deeppink;
   color: #fff;
+  border-color: deeppink;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
 }
 /* Popups */
 .popup {
@@ -552,7 +574,7 @@ select {
   left: 35%;
   right: 35%;
   background-color: #fff;
-  border: solid 2px #dcdcdc;
+  border: solid 2px #a9a9a9;
   overflow: hidden;
   border-radius: 7px;
   -webkit-border-radius: 7px;
@@ -580,7 +602,7 @@ select {
   background-color: rgba(0, 0, 0, 0.5);
 }
 .popup .header {
-  background-color: #dcdcdc;
+  background-color: #a9a9a9;
   color: #fff;
   font-weight: bold;
   padding: 10px;
@@ -594,6 +616,14 @@ select {
   padding: 10px;
   text-align: justify;
 }
+.popup .content .date {
+  color: #a9a9a9;
+  text-align: center;
+}
+.popup .content .date select {
+  display: inline-block;
+  width: auto;
+}
 .popup .footer {
   text-align: center;
   padding: 10px;
@@ -602,6 +632,7 @@ select {
   width: 40%;
   margin-left: 2%;
   margin-right: 2%;
+  color: #a9a9a9;
 }
 .popup.danger {
   border-color: #ff4d4d;
