--- a/less/index.less
+++ b/less/index.less
@@ -158,6 +158,12 @@ select{
     font-size:14px;
     color:@rose;
 }
+textarea{
+    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans serif;
+    font-size: 14px;
+    line-height:22px;
+    color:@noir;
+}
 
 /* header */
 .main-header{
@@ -182,6 +188,7 @@ select{
         width: calc(100%/3);
         text-align: center;
         border-bottom: solid 3px transparent;
+        .transition(all 0.2s ease-in);
 
         a{
             display: block;
@@ -533,13 +540,23 @@ select{
             h3{
                 margin-bottom: 5px;
             }
+
+            textarea{
+                display: block;
+                width: 100%;
+                max-width: 100%;
+                height: 70px;
+                overflow: hidden;
+                background-color: transparent;
+                border:none;
+            }
         }
 
         .maps{
             margin-top: 15px;
             background-color: @gris-clair;
             width: 100%;
-            height: 150px;
+            height: 120px;
         }
     }
 
@@ -618,8 +635,10 @@ select{
         padding:15px;
 
         .btn{
-            background-color:@bleu;
+            background-color:@rose;
             color:#fff;
+            border-color: @rose;
+            .border-radius(0);
         }
     }
 }
@@ -634,7 +653,7 @@ select{
     left:35%;
     right:35%;
     background-color:#fff;
-    border:solid 2px @gris;
+    border:solid 2px @gris-fonce;
     overflow: hidden;
     .border-radius(7px);
     .box-shadow(3px 3px 7px);
@@ -657,18 +676,28 @@ select{
     }
 
     .header{
-        background-color: @gris;
+        background-color: @gris-fonce;
         color:#fff;
         font-weight: bold;
         padding: 10px;
-		position:relative;
-		margin-right: -1px;
+        position:relative;
+        margin-right: -1px;
         .text-shadow(1px 1px 2px);
     }
 
     .content{
         padding: 10px;
         text-align: justify;
+
+        .date{
+            color:@gris-fonce;
+            text-align:center;
+
+            select{
+                display: inline-block;
+                width: auto;
+            }
+        }
     }
 
     .footer{
@@ -679,6 +708,7 @@ select{
             width: 40%;
             margin-left: 2%;
             margin-right: 2%;
+            color:@gris-fonce;
         }
     }
 
@@ -697,10 +727,10 @@ select{
         }
     }
 
-	&.warning{
-		border-color:lighten(orange, 15%);
+    &.warning{
+        border-color:lighten(orange, 15%);
 
-		.header{
+        .header{
             background-color: lighten(orange, 15%);
         }
 
@@ -709,12 +739,12 @@ select{
                 color:lighten(orange, 15%);
             }
         }
-	}
+    }
 
-	&.success{
-		border-color:lighten(green, 5%);
+    &.success{
+        border-color:lighten(green, 5%);
 
-		.header{
+        .header{
             background-color: lighten(green, 5%);
         }
 
@@ -723,7 +753,7 @@ select{
                 color:lighten(green, 5%);
             }
         }
-	}
+    }
 }
 /* Boutons */
 .btn,
