--- a/views/rdv-detail.html
+++ b/views/rdv-detail.html
@@ -4,11 +4,11 @@
 
         <div class="avatar" style="background-image:url({{item.beneficiaire.avatar}})"></div>
 
-        <div class="date">
-            {{item.date| date:"d/MM/yyyy"}}
+        <div class="date" data-ng-click="changeDate()">
+            {{item.date| date:"dd/MM/yyyy"}}
         </div>
 
-        <div class="heure">
+        <div class="heure" data-ng-click="changeDate()">
             {{item.date| date:"hh:mm"}}
         </div>
 
@@ -42,18 +42,18 @@ Etat et détail du remboursement
         <a href="tel:{{item.telephone}}" class="telephone">{{item.telephone}}</a>
 
         <!--
-Redirige vers Google Maps. Lance l'application si installée sinon le navigateur.
+        Redirige vers Google Maps. Lance l'application si installée sinon le navigateur.
         -->
         <a data-ng-href="https://www.google.fr/maps/dir/ma+position/{{item.adresse}}" target="_blank" class="itineraire">Itinéraire</a>
 
         <!--
-ngMap
+        ngMap
         -->
         <map class="maps" center="{{item.adresse}}" zoom="14" disable-default-u-i="true"></map>
 
         <blockquote class="notes">
             <h3>Notes</h3>
-            <div contenteditable="true" data-ng-blur="notesChange()">{{item.notes}}</div>
+            <textarea data-ng-model="item.notes">{{item.notes}}</textarea>
         </blockquote>
 
     </div>
@@ -67,12 +67,12 @@ ngMap
 
         <button class="btn success" data-ng-click="archiveEvenement()">
 
-            <embed src="img/archive.svg" type="image/svg+xml" id="btn-2" onload="svgFill(this.id, 'Core', 'orange')" class="icon" />
+            <embed src="img/archive.svg" type="image/svg+xml" id="btn-2" onload="svgFill(this.id, 'Core', 'gray')" class="icon" />
         </button>
 
         <button class="btn danger" data-ng-click="deleteEvenement()">
 
-            <embed src="img/cancel.svg" type="image/svg+xml" id="btn-3" onload="svgFill(this.id, 'Core', 'red')" class="icon" />
+            <embed src="img/delete.svg" type="image/svg+xml" id="btn-3" onload="svgFill(this.id, 'Core', 'red')" class="icon" />
         </button>
 
     </footer>
@@ -85,19 +85,19 @@ Reçoit les popup : voir directives.js
 <popup ng-translude></popup>
 
 <script>
-            /*
-             * Permet de changer la couleur de remplissage d'un élément du fichier SVG.
-             *
-             * @idSVG : id de l'image
-             * @idElement : id de l'élement à colorer dans le SVG
-             * @color : couleur à utiliser
-             */
-            var svgFill = function (idSVG, idElement, color){
+    /*
+     * Permet de changer la couleur de remplissage d'un élément du fichier SVG.
+     *
+     * @idSVG : id de l'image
+     * @idElement : id de l'élement à colorer dans le SVG
+     * @color : couleur à utiliser
+     */
+    var svgFill = function (idSVG, idElement, color){
 
-                var svg = document.getElementById(idSVG);
+        var svg = document.getElementById(idSVG);
 
-                var element = svg.getSVGDocument().getElementById(idElement);
+        var element = svg.getSVGDocument().getElementById(idElement);
 
-                element.setAttribute("fill", color);
-            };
+        element.setAttribute("fill", color);
+    };
 </script>
