--- a/css/index.css
+++ b/css/index.css
@@ -114,7 +114,7 @@ textarea {
 .menu li {
   display: block;
   float: left;
-  width: calc(33.33333333%);
+  width: calc(100%/3);
   text-align: center;
   border-bottom: solid 3px transparent;
   transition: all 0.2s ease-in;
@@ -161,11 +161,13 @@ textarea {
 /* Home */
 .home {
   position: fixed;
-  width: 100%;
-  height: 100%;
+  z-index: 2;
   left: 0;
   top: 0;
-  z-index: 2;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
   background-color: deepskyblue;
   background-image: url(../img/background.jpg);
   background-repeat: no-repeat;
@@ -174,12 +176,13 @@ textarea {
 }
 .home .connexion {
   position: fixed;
-  width: 50%;
+  top: 20%;
   left: 25%;
   right: 25%;
-  top: 25%;
-  background-color: #fff;
+  width: 50%;
+  margin: 0 auto;
   padding: 3%;
+  background-color: #fff;
   border-top: solid 5px deepskyblue;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
   -webkit-box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
@@ -188,8 +191,6 @@ textarea {
 @media all and (max-width: 640px) {
   .home .connexion {
     width: 80%;
-    left: 10%;
-    right: 10%;
   }
 }
 .home .connexion:after {
@@ -246,7 +247,7 @@ textarea {
 .list-menu li {
   display: block;
   float: left;
-  width: calc(33.33333333%);
+  width: calc(100%/3);
   text-align: center;
 }
 .list-menu li:nth-child(2) {
@@ -290,7 +291,7 @@ textarea {
   list-style: none;
   margin: auto;
   margin-bottom: 1%;
-  width: calc(98%);
+  width: calc(100% - 2%);
 }
 .list-rdv li:after {
   display: block;
@@ -387,7 +388,7 @@ textarea {
 .detail-rdv {
   overflow: hidden;
   background-color: white;
-  width: calc(98.5%);
+  width: calc(100% - 1.5%);
   margin: auto;
   margin-bottom: 10px;
   border: solid 1px #dcdcdc;
@@ -469,7 +470,7 @@ textarea {
 .detail-rdv .content .remboursement .montant,
 .detail-rdv .content .remboursement .message {
   float: left;
-  width: calc(30.3030303%);
+  width: calc(100% / 3.3);
   text-align: center;
   line-height: 21px;
   vertical-align: middle;
@@ -578,7 +579,7 @@ textarea {
   background-color: transparent;
   border: none;
   padding: 15px 0;
-  width: calc(33.33333333%);
+  width: calc(100% / 3);
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
@@ -614,7 +615,7 @@ textarea {
 .search-ps {
   overflow: hidden;
   background-color: white;
-  width: calc(98.5%);
+  width: calc(100% - 1.5%);
   margin: auto;
   margin-bottom: 10px;
   border: solid 1px #dcdcdc;
@@ -674,11 +675,13 @@ textarea {
 }
 .popup-masque {
   position: fixed;
+  z-index: 2;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
-  z-index: 2;
+  bottom: 0;
+  right: 0;
   background-color: rgba(0, 0, 0, 0.5);
 }
 .popup .header {
@@ -824,7 +827,7 @@ input[type=reset].flottant {
   position: fixed;
   z-index: 1;
   bottom: 25px;
-  right: calc(18.18181818%);
+  right: calc(100% / 5.5);
   background-color: deeppink;
   width: 60px;
   height: 60px;
