--- a/views/popups/change-date.html
+++ b/views/popups/change-date.html
@@ -18,6 +18,7 @@ Popup personalisable
             <p>{{popup.message}}</p>
 
             <div class="date">
+                <strong>Date :</strong>
                 <select
                     data-ng-change="onChangeDate(dateJour, 'jour')"
                     data-ng-model="dateJour"
@@ -50,6 +51,7 @@ Popup personalisable
             </div>
 
             <div class="date">
+                <strong>Heure :</strong>
                 <select
                     data-ng-change="onChangeDate(dateHeure, 'heure')"
                     data-ng-model="dateHeure"
