--- a/views/rdv-list.html
+++ b/views/rdv-list.html
@@ -12,11 +12,11 @@ Filtre rapide
 <!--
 Liste des RDV
 -->
-<ul class="list-rdv" data-ng-repeat="(date, value) in items | filter : {etat:query} | groupBy :'dateJour'">
+<ul class="list-rdv" data-ng-repeat="(date, value) in items | filter : {etat:query} | groupBy :'dateJour' | orderBy:'dateJour'">
 
     <li class="date">{{date|date:'dd/MM/yyyy'}}</li>
 
-    <li data-ng-repeat="item in value| orderBy : 'date'">
+    <li data-ng-repeat="item in value">
 
         <div class="avatar" style="background-image:url({{item.beneficiaire.avatar}})"></div>
 
