--- a/views/settings.html
+++ b/views/settings.html
@@ -5,6 +5,6 @@
         <label for="notifications">Notifications</label>
         <input type="checkbox" name="notification" value="true" checked=""/>
     </li>
-    <li><a href="">Simuler une notification</a></li>
-    <li><a href="">Réinitialiser</a></li>
+    <li><a data-ng-click="simulerNotification()" href="">Simuler une notification</a></li>
+    <li><a data-ng-click="clearCache()" href="">Réinitialiser</a></li>
 </ul>
