--- a/css/index.css
+++ b/css/index.css
@@ -169,21 +169,20 @@ textarea {
   width: 100%;
   height: 100%;
   background-color: deepskyblue;
-  background-image: url(../img/background.jpg);
-  background-repeat: no-repeat;
-  background-position: center bottom;
-  background-size: cover;
+  /*    background-image: url(../img/background.jpg);
+        background-repeat:no-repeat;
+        background-position:center bottom;
+        background-size:cover;*/
 }
 .home .connexion {
   position: fixed;
   top: 25%;
-  left: 25%;
-  right: 25%;
-  width: 50%;
+  left: 30%;
+  right: 30%;
+  width: 40%;
   margin: 0 auto;
   padding: 3%;
   background-color: #fff;
-  border-top: solid 5px deepskyblue;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
   -webkit-box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
@@ -214,11 +213,15 @@ textarea {
   -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
   -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 }
+.home .connexion input {
+  font-size: 16px;
+}
 .home .connexion .btn {
   float: right;
   background-color: deeppink;
-  border-color: deeppink;
+  border: none;
   color: #fff;
+  padding: 10px 20px;
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
@@ -231,7 +234,7 @@ textarea {
   color: #fff;
 }
 .home .brand h1 {
-  font-size: 30px;
+  font-size: 24px;
   padding: 10%;
 }
 /* list-menu : filtre une liste */
@@ -305,9 +308,9 @@ textarea {
 }
 .list-rdv li .avatar {
   float: left;
-  width: 48px;
-  height: 48px;
-  margin-top: 5%;
+  width: 50px;
+  height: 50px;
+  margin-top: 4%;
   margin-right: 2%;
   background-color: whitesmoke;
   background-repeat: no-repeat;
@@ -320,7 +323,7 @@ textarea {
 .list-rdv li a {
   display: block;
   float: right;
-  width: calc(100% - 48px - 2%);
+  width: calc(100% - 50px - 2%);
   background-color: #fff;
   border: solid 1px #dcdcdc;
   box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.05);
@@ -653,9 +656,6 @@ textarea {
   background-color: white;
   padding: 0;
   margin-top: -10px;
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
-  -webkit-box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
 }
 .settings li {
   border-bottom: solid 1px whitesmoke;
@@ -675,14 +675,14 @@ textarea {
 }
 .settings li a {
   display: block;
-  padding: 3%;
+  padding: 6% 3%;
   vertical-align: middle;
 }
 .settings li label,
 .settings li input {
   display: inline-block;
   width: auto;
-  margin: 3%;
+  margin: 6% 3%;
   /* trick */
   cursor: pointer;
 }
@@ -692,6 +692,81 @@ textarea {
 }
 .settings li input {
   float: right;
+}
+/* Tutoriel */
+.tutoriel {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  background-color: deepskyblue;
+  /*    background-image: url(../img/background.jpg);
+        background-repeat:no-repeat;
+        background-position:center bottom;
+        background-size:cover;*/
+  color: white;
+  padding: 5%;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.05);
+}
+.tutoriel .panel {
+  position: fixed;
+  top: 20%;
+  left: 15%;
+  right: 15%;
+  width: 70%;
+  margin: 0 auto;
+}
+@media all and (max-width: 480px) {
+  .tutoriel .panel {
+    width: 90%;
+    left: 5%;
+    right: 5%;
+  }
+}
+.tutoriel .panel h1 {
+  font-size: 30px;
+  margin-bottom: 10%;
+  word-wrap: break-word;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+.tutoriel .panel p {
+  font-size: 24px;
+  line-height: 40px;
+  margin-bottom: 10%;
+  text-align: left;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+.tutoriel .panel div:after {
+  display: block;
+  float: none;
+  clear: both;
+  height: 0;
+  content: "";
+  visibility: hidden;
+}
+.tutoriel .panel div .btn {
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: none;
+  color: white;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: 0 0 0 rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 0 0 rgba(0, 0, 0, 0.05);
 }
 /* Popups */
 .popup {
@@ -929,6 +1004,16 @@ input[type=reset].flottant:hover {
   -webkit-animation-name: bounceInDown;
   animation-name: bounceInDown;
 }
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
+.flipInY {
+  -webkit-backface-visibility: visible !important;
+  -webkit-animation-name: flipInY;
+  backface-visibility: visible !important;
+  animation-name: flipInY;
+}
 @-webkit-keyframes bounceInDown {
   0% {
     opacity: 0;
@@ -959,6 +1044,54 @@ input[type=reset].flottant:hover {
   }
   100% {
     transform: translateY(0);
+  }
+}
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes flipInY {
+  0% {
+    -webkit-transform: perspective(400px) rotateY(90deg);
+    opacity: 0;
+  }
+  40% {
+    -webkit-transform: perspective(400px) rotateY(-10deg);
+  }
+  70% {
+    -webkit-transform: perspective(400px) rotateY(10deg);
+  }
+  100% {
+    -webkit-transform: perspective(400px) rotateY(0deg);
+    opacity: 1;
+  }
+}
+@keyframes flipInY {
+  0% {
+    transform: perspective(400px) rotateY(90deg);
+    opacity: 0;
+  }
+  40% {
+    transform: perspective(400px) rotateY(-10deg);
+  }
+  70% {
+    transform: perspective(400px) rotateY(10deg);
+  }
+  100% {
+    transform: perspective(400px) rotateY(0deg);
+    opacity: 1;
   }
 }
 /*# sourceMappingURL=index.css.map */
